<resources>
    <string name="app_name">CSC-456</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="adventures">Adventures</string>
    <string name="chapters">Chapters</string>
    <string name="badges">Badges</string>
    <string name="topics_header">Topics:</string>
    <string name="readings">Readings:</string>
    <string name="slides">Slides:</string>
    <string name="about">About</string>
    <string name="github">Github</string>
    <string name="project_github_url">https://github.com/AKiniyalocts/CSC-456</string>
    <string name="title_activity_badge_detail">BadgeDetailActivity</string>
    <string name="overview">Overview</string>
</resources>
